update large break point card size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-zinc-900 flex items-center justify-center min-h-screen">
     <div
-      class="bg-zinc-800 p-6 rounded-lg mx-2 my-3 sm:min-w-96 shadow-xl"
+      class="bg-zinc-800 p-6 rounded-lg mx-2 my-3 sm:min-w-96 lg:min-w-xl shadow-xl"
       id="card"
     >
       <div class="flex items-center justify-center m-6" id="img-container">
